// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Betting renders Betting for double choices 1`] = `
<Styled(div)>
  <Styled(div)
    background="#b4292c"
    text="#ffffff"
  >
    Betline
  </Styled(div)>
  <Styled(div)>
    Pariez !
  </Styled(div)>
  <Styled(div)>
    <Styled(div)
      key="1"
    >
      <Styled(div)>
        1
      </Styled(div)>
      <Styled(a)
        href="http://google.fr"
        target="_blank"
      >
        2.80
      </Styled(a)>
      <Styled(div)>
        Nadal
      </Styled(div)>
    </Styled(div)>
    <Styled(div)
      key="2"
    >
      <Styled(div)>
        2
      </Styled(div)>
      <Styled(a)
        href="http://bing.fr"
        target="_blank"
      >
        1.70
      </Styled(a)>
      <Styled(div)>
        Federer
      </Styled(div)>
    </Styled(div)>
  </Styled(div)>
</Styled(div)>
`;

exports[`Betting renders Betting for triple choices 1`] = `
<Styled(div)>
  <Styled(div)
    background="#b4292c"
    text="#ffffff"
  >
    Betline
  </Styled(div)>
  <Styled(div)>
    Pariez !
  </Styled(div)>
  <Styled(div)>
    <Styled(div)
      key="1"
    >
      <Styled(div)>
        1
      </Styled(div)>
      <Styled(a)
        href="http://google.fr"
        target="_blank"
      >
        2.80
      </Styled(a)>
      <Styled(div)>
        Nadal
      </Styled(div)>
    </Styled(div)>
    <Styled(div)
      key="2"
    >
      <Styled(div)>
        2
      </Styled(div)>
      <Styled(a)
        href="http://yahoo.fr"
        target="_blank"
      >
        4.90
      </Styled(a)>
    </Styled(div)>
    <Styled(div)
      key="3"
    >
      <Styled(div)>
        3
      </Styled(div)>
      <Styled(a)
        href="http://bing.fr"
        target="_blank"
      >
        1.70
      </Styled(a)>
      <Styled(div)>
        Federer
      </Styled(div)>
    </Styled(div)>
  </Styled(div)>
</Styled(div)>
`;
